--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -2,35 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
-	<key>CFBundleExecutable</key>
-	<string>Hello</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.plexapp.plugins.tunein</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundlePackageType</key>
-	<string>AAPL</string>
-	<key>CFBundleSignature</key>
-	<string>hook</string>
-	<key>CFBundleVersion</key>
-	<string>1.0</string>
 	<key>PlexClientPlatforms</key>
-	<string>MacOSX</string>
+	<string>*</string>
 	<key>PlexFrameworkVersion</key>
 	<string>2</string>
-	<key>PlexPluginMode</key>
-	<string>AlwaysOn</string>
-	<key>PlexURLServices</key>
-	<dict>
-		<key>TuneIn</key>
-		<dict>
-			<key>URLPattern</key>
-			<string>http://opml.radiotime.com/Tune.ashx.*</string>
-			<key>LinkedPlugin</key>
-			<string>com.plexapp.plugins.tunein</string>
-		</dict>
-    </dict>
 </dict>
 </plist>
